add Japanese messages translations.
Former-commit-id: 0812fd1a0966b8bbd01ca82b3a826c63fa8982bf

--- a/pubman/pubman_presentation/src/main/resources/Messages_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_ja.properties
@@ -58,7 +58,7 @@ ComponentRequired = Please either upload at least one file or enter a locator.
 
 ComponentVisibilityNotProvided = An attached file is missing the specification of the file visibility.
 
-ConfirmRollbackItemVersion = Do you wish to replace the current version with this version?
+ConfirmRollbackItemVersion = \u73fe\u884c\u30d0\u30fc\u30b8\u30e7\u30f3\u306e\u5185\u5bb9\u3092\u3053\u306e\u30d0\u30fc\u30b8\u30e7\u30f3\u306b\u623b\u3057\u307e\u3059\u3002\u3088\u308d\u3057\u3044\u3067\u3059\u304b?
 
 ContributionCollEditionSourceNotProvided = If genre is equal to "Contribution to Collected Edition" the source has to be "Collected Edition".
 
@@ -76,7 +76,7 @@ CreatorGivennameNotProvided = The given name of the creator must be provided.
 
 CreatorNotProvided = \u5C11\u306A\u304F\u3068\u30821\u540D\u5206\u306F\u4F5C\u8005\u3092\u5165\u529B\u3057\u3066\u304F\u3060\u3055\u3044\u3002
 
-CreatorOrganizationNameNotProvided = An organizations name is not provided.
+CreatorOrganizationNameNotProvided = \u7d44\u7e54\u540d\u79f0\u304c\u5165\u529b\u3055\u308c\u3066\u3044\u307e\u305b\u3093\u3002
 
 CreatorRoleNotProvided = \u4F5C\u8005\u7A2E\u5225\u304C\u5165\u529B\u3055\u308C\u3066\u3044\u307E\u305B\u3093\u3002
 
@@ -84,7 +84,7 @@ DateAcceptedNotCorrect1 = Every acceptance date should have the year of the year
 
 DateAcceptedNotProvided = Date accepted must be provided
 
-DateFormatIncorrect = An entered date is not in one of the following formats: YYYY or YYYY-MM or YYYY-MM-DD.
+DateFormatIncorrect = \u65e5\u4ed8\u60c5\u5831\u306f\u4ee5\u4e0b\u306e\u3044\u305a\u308c\u304b\u306e\u66f8\u5f0f\u3067\u5165\u529b\u3059\u308b\u5fc5\u8981\u304c\u3042\u308a\u307e\u3059: YYYY \u30fb YYYY-MM \u30fb YYYY-MM-DD
 
 DateModifiedNotProvided = 2007-01-01\u4EE5\u964D\u306E\u300C\u4FEE\u6B63\u300D\u65E5\u4ED8\u3092\u5165\u529B\u3059\u308B\u5FC5\u8981\u304C\u3042\u308A\u307E\u3059\u3002
 
@@ -98,11 +98,11 @@ EndPageNotProvided = End Page requiered.
 
 EnglishAbstractNotProvided = An abstract in "English" has to be provided.
 
-EntryIsNotANumber = The affiliation number of a creator is not valid: "$1"
+EntryIsNotANumber = \u6240\u5c5e\u756a\u53f7\u306e\u5165\u529b\u304c\u756a\u53f7\u3068\u3057\u3066\u6b63\u3057\u304f\u3042\u308a\u307e\u305b\u3093: "$1"
 
-EntryIsNotBound = The affiliation number $1 is not linked to any creator. Please add a creator for this affiliation or remove the affiliation.
+EntryIsNotBound = \u6240\u5c5e\u756a\u53f7 $1 \u306f\u3044\u305a\u308c\u306e\u4f5c\u8005\u306b\u3082\u7d10\u4ed8\u3051\u3089\u308c\u3066\u3044\u307e\u305b\u3093\u3002\u3053\u306e\u6240\u5c5e\u306b\u5bfe\u3059\u308b\u4f5c\u8005\u3092\u5165\u529b\u3059\u308b\u304b\u3001\u6240\u5c5e\u3092\u524a\u9664\u3057\u3066\u304f\u3060\u3055\u3044\u3002
 
-EntryIsNotInValidRange = The affiliation number of a creator is in the valid range: "$1"
+EntryIsNotInValidRange = \u4f5c\u8005\u6240\u5c5e\u756a\u53f7\u306b\u4e0d\u6b63\u306a\u5024\u304c\u6307\u5b9a\u3055\u308c\u3066\u3044\u307e\u3059: "$1"
 
 ErrorInOrganizationAssignment = An unexpected error occured while assigning affiliations to creators: "$1"
 
@@ -122,15 +122,15 @@ GenreNotProvided = \u7A2E\u5225\u3092\u5165\u529B\u3057\u3066\u304F\u3060\u3055\
 
 GenreNotSuitable = \u9078\u629E\u4E2D\u306E\u30B3\u30EC\u30AF\u30B7\u30E7\u30F3\u3067\u306F\u6307\u5B9A\u3057\u305F\u8CC7\u6599\u7A2E\u5225\u306E\u767B\u9332\u306F\u8A31\u53EF\u3055\u308C\u3066\u3044\u307E\u305B\u3093\u3002
 
-IdTypeNotProvided = An identifier is missing the type.
+IdTypeNotProvided = \u8b58\u5225\u5b50\u306b\u306f\u305d\u306e\u7a2e\u985e\u3092\u5165\u529b\u3057\u3066\u304f\u3060\u3055\u3044\u3002
 
-ImportNameNotProvided = NEW:Please enter a name for the import
+ImportNameNotProvided = \u4e00\u62ec\u767b\u9332\u7528\u306e\u540d\u79f0\u3092\u5165\u529b\u3057\u3066\u304f\u3060\u3055\u3044\u3002
 
 IncorrectClassification = \u5206\u985E\u4F53\u7CFB\uFF08\u4E3B\u984C\uFF09\u306B\u5165\u529B\u3055\u308C\u305F\u30AD\u30FC\u30EF\u30FC\u30C9\u306E\u66F8\u5F0F\u304C\u6B63\u3057\u304F\u3042\u308A\u307E\u305B\u3093\u3002
 
 IncorrectDDCClassification = \u30C7\u30E5\u30FC\u30A4\u5341\u9032\u5206\u985E\uFF08DDC\uFF09\u306B\u5B58\u5728\u3057\u306A\u3044\u30AD\u30FC\u30EF\u30FC\u30C9\u304C\u5165\u529B\u3055\u308C\u3066\u3044\u307E\u3059\u3002
 
-IncorrectMPIPKSClassification = \u30C7\u30E5\u30FC\u30A4\u5341\u9032\u5206\u985E\uFF08DDC\uFF09\u306B\u5B58\u5728\u3057\u306A\u3044\u30AD\u30FC\u30EF\u30FC\u30C9\u304C\u5165\u529B\u3055\u308C\u3066\u3044\u307E\u3059\u3002
+IncorrectMPIPKSClassification = MPI PKS \u5206\u985e\u306b\u5b58\u5728\u3057\u306a\u3044\u30ad\u30fc\u30ef\u30fc\u30c9\u304c\u5165\u529b\u3055\u308c\u3066\u3044\u307e\u3059\u3002
 
 IncorrectMPISGroupsClassification = [NEW] The entered keyword does not conform to the MPIS group classification. 
 
@@ -240,7 +240,7 @@ TitleNotProvided = \u30BF\u30A4\u30C8\u30EB\u60C5\u5831\u3092\u5165\u529B\u3057\
 
 TotalNumberOfPagesNotProvided = The total number of pages must be provided
 
-UnknownLanguageCode = The given language code does not exist in ISO639-3
+UnknownLanguageCode = \u5b58\u5728\u3057\u306a\u3044\u8a00\u8a9e\u30b3\u30fc\u30c9\u304c\u5165\u529b\u3055\u308c\u3066\u3044\u307e\u3059\u3002
 
 UploadFileNotProvided = NEW: Please select a file
 
@@ -250,7 +250,7 @@ ViewItemFull_inRevision = This item is in rework! Last message:
 
 ViewItemFull_invalidID = \u8B58\u5225\u5B50$1\u306E\u30A2\u30A4\u30C6\u30E0\u306F\u898B\u3064\u304B\u308A\u307E\u305B\u3093\u3067\u3057\u305F\u3002
 
-ViewItemFull_noPermission = リクエストされたバージョンの内容を閲覧する権限が設定されていません。
+ViewItemFull_noPermission = \u30ea\u30af\u30a8\u30b9\u30c8\u3055\u308c\u305f\u30d0\u30fc\u30b8\u30e7\u30f3\u306e\u5185\u5bb9\u3092\u95b2\u89a7\u3059\u308b\u6a29\u9650\u304c\u8a2d\u5b9a\u3055\u308c\u3066\u3044\u307e\u305b\u3093\u3002
 
 ViewItemFull_submitted = \u30A2\u30A4\u30C6\u30E0\u304C\u767B\u9332\u3055\u308C\u307E\u3057\u305F\u3002\u767B\u9332\u30E1\u30C3\u30BB\u30FC\u30B8\u306F\u4EE5\u4E0B\u306E\u901A\u308A\u3067\u3059:
 
@@ -319,7 +319,7 @@ copyright = \u00A9 2007 Max Planck Society
 #
 create_Item_Select_Collection = \u30A2\u30A4\u30C6\u30E0\u3092\u767B\u9332\u3059\u308B\u30B3\u30EC\u30AF\u30B7\u30E7\u30F3\u3092\u9078\u629E\u3057\u3066\u304F\u3060\u3055\u3044\u3002
 
-deleteItemsFromBasket_NoItemSelected = Please select at least one item to delete.
+deleteItemsFromBasket_NoItemSelected = \u524a\u9664\u3057\u305f\u3044\u30a2\u30a4\u30c6\u30e0\u3092\u9078\u629e\u3057\u3066\u304f\u3060\u3055\u3044\u3002
 
 #
 # Delete Message
@@ -330,7 +330,7 @@ depositorWS_ManyItemsSelected = Please select a single item.
 
 depositorWS_NoItemSelected = Please select an item.
 
-depositorWS_NoWithdrawalCommentGiven = Please provide a withdrawal comment.
+depositorWS_NoWithdrawalCommentGiven = \u53d6\u308a\u4e0b\u3052\u30b3\u30e1\u30f3\u30c8\u3092\u5165\u529b\u3057\u3066\u304f\u3060\u3055\u3044\u3002
 
 depositorWS_NotSuccessfullySubmitted = \u30A2\u30A4\u30C6\u30E0\u767B\u9332\u30EB\u30FC\u30EB\u306E\u691C\u8A3C\u4E2D\u306B\u30A8\u30E9\u30FC\u304C\u3042\u308B\u305F\u3081\u3001\u767B\u9332\u51E6\u7406\u3092\u9032\u3081\u3089\u308C\u307E\u305B\u3093\u3002
 
@@ -436,7 +436,7 @@ exportItems_NoDataDelivered = No Export data from external service delivered.
 #
 exportItems_NoItemSelected = \u30D5\u30A1\u30A4\u30EB\u4FDD\u5B58\u6A5F\u80FD\u3092\u4F7F\u3046\u306B\u306F\u3001\u4E00\u3064\u4EE5\u4E0A\u306E\u30A2\u30A4\u30C6\u30E0\u3092\u9078\u629E\u3057\u3066\u304F\u3060\u3055\u3044\u3002
 
-exportItems_RecipientsAreNotDefined = Please define at least one email recipient.
+exportItems_RecipientsAreNotDefined = \u30e1\u30fc\u30eb\u30a2\u30c9\u30ec\u30b9\u3092\u5165\u529b\u3057\u3066\u304f\u3060\u3055\u3044\u3002
 
 exportItems_UnknownRecipients = You have entered an invalid E-Mail address. Please check and revise your entry.
 
@@ -598,7 +598,7 @@ itemHasBeenChangedInTheMeantime = The item you want to save, submit or release, 
 # EditItem
 itemHasNotBeenChanged = The Item was not changed and therefore not saved once again.
 
-itemIsNotLatestVersion = ご覧のアイテムは最新版ではありません。
+itemIsNotLatestVersion = \u3054\u89a7\u306e\u30a2\u30a4\u30c6\u30e0\u306f\u6700\u65b0\u7248\u3067\u306f\u3042\u308a\u307e\u305b\u3093\u3002
 
 #
 # Validation rule responses
@@ -617,7 +617,7 @@ javax.faces.component.UISelectMany.INVALID_detail = Input not valid
 javax.faces.component.UISelectOne.INVALID         = Validation error
 javax.faces.component.UISelectOne.INVALID_detail  = Input not valid
 
-listError_goTo = The given page number is not valid 
+listError_goTo = \u6307\u5b9a\u3055\u308c\u305f\u30da\u30fc\u30b8\u756a\u53f7\u306f\u8a8d\u8b58\u3067\u304d\u307e\u305b\u3093\u3002
 
 localeDE = \u30C9\u30A4\u30C4\u8A9E
 
@@ -662,19 +662,19 @@ searchResultList_PleaseTryOptions = Please try the following options:
 
 searchResultList_QueryString = \u4EE5\u4E0B\u306E\u691C\u7D22\u5F0F\u304C\u5B9F\u884C\u3055\u308C\u307E\u3057\u305F: 
 
-search_NoCriteria = 検索条件が入力されていません。検索式を再度入力して検索し直してください。
+search_NoCriteria = \u691c\u7d22\u6761\u4ef6\u304c\u5165\u529b\u3055\u308c\u3066\u3044\u307e\u305b\u3093\u3002\u691c\u7d22\u5f0f\u3092\u518d\u5ea6\u5165\u529b\u3057\u3066\u691c\u7d22\u3057\u76f4\u3057\u3066\u304f\u3060\u3055\u3044\u3002
 
 # Search Error
-search_ParseError = Search expression contains illegal characters e. g. ", * or ? at first position.
+search_ParseError = \u691c\u7d22\u30af\u30a8\u30ea\u306b\u8a31\u53ef\u3055\u308c\u306a\u3044\u6587\u5b57\uff08 " * ? \u306a\u3069\uff09\u304c\u542b\u307e\u308c\u3066\u3044\u307e\u3059\u3002
 
 search_TechnicalError = Technical error while processing the search query
 
 #
 # Tools
 #
-toolsOverview = PubManで使える追加サービスです。
+toolsOverview = PubMan\u3067\u4f7f\u3048\u308b\u8ffd\u52a0\u30b5\u30fc\u30d3\u30b9\u3067\u3059\u3002
 
-toolsMoreInformation = 詳細は以下のページをご覧ください: 
+toolsMoreInformation = \u8a73\u7d30\u306f\u4ee5\u4e0b\u306e\u30da\u30fc\u30b8\u3092\u3054\u89a7\u304f\u3060\u3055\u3044: 
 
 #
 # Common
