--- a/pubman/pubman_presentation/src/main/resources/Label_MPG_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_MPG_en.properties
@@ -864,7 +864,7 @@ Home_Header_LastItems = Most Recently Released Items
 
 Home_Header_LastItems_Disabled = Last items feed disabled due to non-productive environment
 
-Home_Header_News = Latest News on MPG PuRe
+Home_Header_News = Latest News on MPG.PuRe
 
 Home_Header_News_Disabled = News disabled due to non-productive environment
 
@@ -976,7 +976,7 @@ NoSearchResultListPage = No Search Results
 
 NoSearchResultsPage = No search results
 
-Pubman_browserTitle = MPG PuRe
+Pubman_browserTitle = MPG.PuRe
 
 Pubman_descriptionMetaTag = PubMan - an eSciDoc solution for publication data management
 
