--- a/pubman/pubman_presentation/src/main/resources/Label_MPG_es.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_MPG_es.properties
@@ -855,7 +855,7 @@ Home_Header_LastItems = \u00DAltimos items
 
 Home_Header_LastItems_Disabled = \u00DAltimos Items deshabilitados por entorno no productivo
 
-Home_Header_News = \u00DAltimas noticias sobre MPG PuRe
+Home_Header_News = \u00DAltimas noticias sobre MPG.PuRe
 
 Home_Header_News_Disabled = Noticias deshabilitadas por entorno no productivo
 
@@ -967,7 +967,7 @@ NoSearchResultListPage = No hay resultados de la b\u00FAsqueda
 
 NoSearchResultsPage = No hay resultados de la b\u00FAsqueda
 
-Pubman_browserTitle = MPG PuRe
+Pubman_browserTitle = MPG.PuRe
 
 Pubman_descriptionMetaTag = PubMan - an eSciDoc solution for publication data management
 
