--- a/pubman/pubman_presentation/src/main/resources/Label_MPG_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_MPG_de.properties
@@ -864,7 +864,7 @@ Home_Header_LastItems = K\u00FCrzlich freigegebene Datens\u00E4tze
 
 Home_Header_LastItems_Disabled = Keine Produktivumgebung daher Feed deaktiviert
 
-Home_Header_News = Aktuelles von MPG PuRe
+Home_Header_News = Aktuelles von MPG.PuRe
 
 Home_Header_News_Disabled = Keine Produktionsumgebung daher News deaktiviert
 
@@ -976,7 +976,7 @@ NoSearchResultListPage = keine Treffer
 
 NoSearchResultsPage = Keine Treffer
 
-Pubman_browserTitle = MPG PuRe
+Pubman_browserTitle = MPG.PuRe
 
 Pubman_descriptionMetaTag = PubMan -  eine eSciDoc L\u00F6sung f\u00FCr Publikationsdaten-Management
 
