- Yearbook - Labels - Bugfixes
Former-commit-id: 74f05b4da14ff62d3be934c51a789cbe11765fef

--- a/pubman/pubman_presentation/src/main/resources/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_de.properties
@@ -294,6 +294,8 @@ ENUM_CRITERIA_STATE = Status
 
 ENUM_CRITERIA_TITLE = Titel
 
+ENUM_CRITERIA_CREATION_DATE = Erstellungsdatum
+
 ENUM_DEGREETYPE_BACHELOR = Bachelor
 
 ENUM_DEGREETYPE_DIPLOMA = Diplom
@@ -1424,7 +1426,7 @@ ViewItemMedium_lblGenre = Genre
 
 ViewItemMedium_lblPages = Gesamtseitenzahl
 
-ViewItemMedium_lblPublishingInfo = Ausgabe, Ort, Verlag
+ViewItemMedium_lblPublishingInfo = Ort, Verlag, Ausgabe
 
 ViewItemMedium_lblSequence = Artikelnummer
 
@@ -1442,9 +1444,9 @@ ViewItemMedium_lblSourceGenre = Genre der Quelle
 
 ViewItemMedium_lblSourceIdentifier = Identifikator
 
-ViewItemMedium_lblSourcePubInfo = Ausgabe, Ort, Verlag
+ViewItemMedium_lblSourcePubInfo = Ort, Verlag, Ausgabe
 
-ViewItemMedium_lblSourcePublishingInfo = Verlag, Ort, Ausgabe d. Quelle
+ViewItemMedium_lblSourcePublishingInfo = Ort, Verlag, Ausgabe
 
 ViewItemMedium_lblSourceSequenceNo = Artikelnummer
 
@@ -1727,6 +1729,8 @@ YearbookInvalidItemsPage = Validierungsergebnis
 
 YearbookItemCreatePage = Jahrbuch erstellen
 
+YearbookItemEditPage = Jahrbuch\u002DOptionen
+
 YearbookMembersPage = Mitglieder
 
 YearbookModeratorPage = Jahrbuchverwaltung
@@ -1734,6 +1738,8 @@ YearbookModeratorPage = Jahrbuchverwaltung
 YearbookNonCandidatesPage = \u00DCbrige Datens\u00E4tze
 
 YearbookPage = Jahrbuch
+
+YearbookArchivePage = Jahrbuch Archiv
 
 Yearbook_addToYearbook = Auswahl dem Jahrbuch hinzuf\u00FCgen
 
@@ -1751,17 +1757,29 @@ Yearbook_member = Mitglied
 
 Yearbook_organization = Organisation
 
-Yearbook_releaseYearbook = Jahrbuch abschlie\u00DFen
+Yearbook_submitYearbook = Jahrbuch abschlie\u00DFen
 
-Yearbook_removeFromYearbook = Auswahl aus dem Jahrbuch entfernen
+Yearbook_sendBackForReworkYearbook = Jahrbuch zur\u00FCcksenden
+
+Yearbook_releaseYearbook = Jahrbuch freigeben
+
+Yearbook_removeFromYearbook = Aus dem Jahrbuch entfernen
 
 Yearbook_removeFromYearbookViewItem = Aus dem Jahrbuch entfernen
+
+Yearbook_information = Jahrbuchinformationen
 
 Yearbook_title = Titel
 
 Yearbook_validate = Validieren
 
 Yearbook_validationMessageHeader = Jahrbuch Validierung
+
+Yearbook_editYearbook = Optionen
+
+Yearbook_YearbookArchive = Archiv
+
+Yearbook_btnExport = Jahrbuch exportieren
 
 about = \u00DCber PubMan
 
