--- a/pubman/pubman_presentation/src/main/resources/Label_es.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_es.properties
@@ -294,6 +294,8 @@ ENUM_CRITERIA_STATE = Estado
 
 ENUM_CRITERIA_TITLE = T\u00EDtulo
 
+ENUM_CRITERIA_CREATION_DATE = Creation Date
+
 ENUM_DEGREETYPE_BACHELOR = Bachelor
 
 ENUM_DEGREETYPE_DIPLOMA = Diploma
@@ -1714,6 +1716,8 @@ YearbookInvalidItemsPage = Validation Result
 
 YearbookItemCreatePage = Create Yearbook
 
+YearbookItemEditPage = Yearbook Options
+
 YearbookMembersPage = Members
 
 YearbookModeratorPage = Yearbook Admin
@@ -1721,6 +1725,8 @@ YearbookModeratorPage = Yearbook Admin
 YearbookNonCandidatesPage = Non Candidates
 
 YearbookPage = Yearbook
+
+YearbookArchivePage = Yearbook Archive
 
 Yearbook_addToYearbook = Add selected to Yearbook
 
@@ -1738,17 +1744,29 @@ Yearbook_member = Member
 
 Yearbook_organization = Organization
 
+Yearbook_submitYearbook = Submit Yearbook
+
+Yearbook_sendBackForReworkYearbook = Revise Yearbook
+
 Yearbook_releaseYearbook = Close Yearbook
 
 Yearbook_removeFromYearbook = Remove selected from Yearbook
 
 Yearbook_removeFromYearbookViewItem = Remove from Yearbook
 
+Yearbook_information = Yearbook Information
+
 Yearbook_title = Title
 
 Yearbook_validate = Validate
 
 Yearbook_validationMessageHeader = Yearbook Validation
+
+Yearbook_editYearbook = Options
+
+Yearbook_YearbookArchive = Archive
+
+Yearbook_btnExport = export yearbook
 
 about = Sobre PubMan
 
