--- a/pubman/pubman_presentation/src/main/resources/Messages_es.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_es.properties
@@ -231,6 +231,9 @@ ViewItemFull_browse_to_item_not_in_range = Entered value does not exist.
 #
 ViewItem_deleteConfirmation = \u00BFEst\u00E1 seguro de que quiere eliminar este item?
 
+#
+# Yearbook
+#
 Yearbook_AddedItemsToYearbook = Item(s) added to yearbook
 
 Yearbook_ErrorAddingMembers = Error while adding members
@@ -245,17 +248,41 @@ Yearbook_ReleaseError = Error while closing Yearbook
 
 Yearbook_ReleasedSuccessfully = Yearbook was closed successfully.
 
+Yearbook_SubmitError = Error while submitting Yearbook
+
+Yearbook_SubmittedSuccessfully = Yearbook was submitted successfully.
+
 Yearbook_RemovedItemsFromYearbook = Item(s) removed from yearbook
 
 Yearbook_allItemsValid = All Items are valid
 
 Yearbook_createdSuccessfully = Yearbook was created successfully and can now be filled with members
 
-Yearbook_creationError = Error while creating Yearbook. Please try again later or contact Pubman Support.
+Yearbook_creationError = Error while creating Yearbook or the related User-Group. Please try again later or contact Pubman Support.
 
 Yearbook_grantsAdded = Selected Users were authorized to collaborate on the Yearbook
 
 Yearbook_noYearbookFound = No yearbook for your institute was found.
+
+Yearbook_deleteError = Error while trying to delete the yearbook
+
+Yearbook_editError = Error while trying to edit the yearbook
+
+Yearbook_noArchivedItems = No archived yearbooks were found
+
+Yearbook_sendBackForReworkError = Error while trying to send back for rework
+
+Yearbook_itemNotReleasedWarning = could not be released due to its state
+
+Yearbook_revisedSuccessfully = Yearbook was successfully sent back for rework
+
+Yearbook_itemNotSentBackWarning = could not be sent back for rework due to its state
+
+Yearbook_reinitializeError = the yearbook could not be reinitialized correctly and thus could possibly be not actual
+
+Yearbook_loadArchive = To view previous yearbooks, please visit the 
+
+Yearbook_noItemsSelected = You have not made any selection
 
 basket_ItemsChanged = item(s) han cambiado su estado de forma que usted ya no est\u00E1 autorizado a ver la \u00FAltima versi\u00F3n. Estos items han sido retirados de su cesta temporalmente hasta que la \u00FAltima versi\u00F3n est\u00E9 disponible de nuevo.
 
