--- a/pubman/pubman_presentation/src/main/resources/Tooltip_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Tooltip_de.properties
@@ -542,6 +542,8 @@ EditItem_lblPublishingInfo = Verlag, Ort, Ausgabe
 
 EditItem_lblRelation = Relation
 
+EditItem_lblRemoveAutosuggestAuthor = Person l\u00F6schen
+
 EditItem_lblReviewType = Art der Begutachtung
 
 EditItem_lblSequenceNumber = Sequence Number
