--- a/pubman/pubman_presentation/src/main/resources/Tooltip_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Tooltip_en.properties
@@ -544,6 +544,8 @@ EditItem_lblPublishingInfo = Publishing info
 
 EditItem_lblRelation = Relation
 
+EditItem_lblRemoveAutosuggestAuthor = Delete person
+
 EditItem_lblReviewType = Review type
 
 EditItem_lblSequenceNumber = Sequence Number
