--- a/pubman/pubman_presentation/src/main/resources/Tooltip_es.properties
+++ b/pubman/pubman_presentation/src/main/resources/Tooltip_es.properties
@@ -541,6 +541,8 @@ EditItem_lblPublishingInfo = Informaci\uFFFDn de Publicaci\uFFFDn
 
 EditItem_lblRelation = Relaci\uFFFDn
 
+EditItem_lblRemoveAutosuggestAuthor = Delete person
+
 EditItem_lblReviewType = Tipo de Revisi\uFFFDn
 
 EditItem_lblSequenceNumber = N\uFFFDmero de Secuencia
