--- a/pubman/pubman_presentation/src/main/resources/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_en.properties
@@ -294,6 +294,8 @@ ENUM_CRITERIA_STATE = State
 
 ENUM_CRITERIA_TITLE = Title
 
+ENUM_CRITERIA_CREATION_DATE = Creation Date
+
 ENUM_DEGREETYPE_BACHELOR = Bachelor
 
 ENUM_DEGREETYPE_DIPLOMA = Diploma
@@ -1727,6 +1729,8 @@ YearbookInvalidItemsPage = Validation Result
 
 YearbookItemCreatePage = Create Yearbook
 
+YearbookItemEditPage = Yearbook Options
+
 YearbookMembersPage = Members
 
 YearbookModeratorPage = Yearbook Admin
@@ -1734,6 +1738,8 @@ YearbookModeratorPage = Yearbook Admin
 YearbookNonCandidatesPage = Non Candidates
 
 YearbookPage = Yearbook
+
+YearbookArchivePage = Yearbook Archive
 
 Yearbook_addToYearbook = Add selected to Yearbook
 
@@ -1751,17 +1757,29 @@ Yearbook_member = Member
 
 Yearbook_organization = Organization
 
+Yearbook_submitYearbook = Submit Yearbook
+
+Yearbook_sendBackForReworkYearbook = Revise Yearbook
+
 Yearbook_releaseYearbook = Close Yearbook
 
 Yearbook_removeFromYearbook = Remove selected from Yearbook
 
 Yearbook_removeFromYearbookViewItem = Remove from Yearbook
 
+Yearbook_information = Yearbook Information
+
 Yearbook_title = Title
 
 Yearbook_validate = Validate
 
 Yearbook_validationMessageHeader = Yearbook Validation 
+
+Yearbook_editYearbook = Options
+
+Yearbook_YearbookArchive = Archive
+
+Yearbook_btnExport = export yearbook
 
 about = About PubMan
 
