--- a/pubman/pubman_presentation/src/main/resources/Label_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_ja.properties
@@ -294,6 +294,8 @@ ENUM_CRITERIA_STATE = \u767B\u9332\u72B6\u6CC1
 
 ENUM_CRITERIA_TITLE = \u30BF\u30A4\u30C8\u30EB
 
+ENUM_CRITERIA_CREATION_DATE = Creation Date
+
 ENUM_DEGREETYPE_BACHELOR = \u5B66\u58EB\u53F7 (Bachelor)
 
 ENUM_DEGREETYPE_DIPLOMA = \u5B66\u58EB\u53F7 (Diploma)
@@ -1701,6 +1703,8 @@ YearbookInvalidItemsPage = Validation Result
 
 YearbookItemCreatePage = Create Yearbook
 
+YearbookItemEditPage = Yearbook Options
+
 YearbookMembersPage = Members
 
 YearbookModeratorPage = Yearbook Admin
@@ -1708,6 +1712,8 @@ YearbookModeratorPage = Yearbook Admin
 YearbookNonCandidatesPage = Non Candidates
 
 YearbookPage = Yearbook
+
+YearbookArchivePage = Yearbook Archive
 
 Yearbook_addToYearbook = Add selected to Yearbook
 
@@ -1725,17 +1731,29 @@ Yearbook_member = Member
 
 Yearbook_organization = Organization
 
+Yearbook_submitYearbook = Submit Yearbook
+
+Yearbook_sendBackForReworkYearbook = Revise Yearbook
+
 Yearbook_releaseYearbook = Close Yearbook
 
 Yearbook_removeFromYearbook = Remove selected from Yearbook
 
 Yearbook_removeFromYearbookViewItem = Remove from Yearbook
 
+Yearbook_information = Yearbook Information
+
 Yearbook_title = Title
 
 Yearbook_validate = Validate
 
 Yearbook_validationMessageHeader = Yearbook Validation
+
+Yearbook_editYearbook = Options
+
+Yearbook_YearbookArchive = Archive
+
+Yearbook_btnExport = export yearbook
 
 about = PubMan\u306B\u3064\u3044\u3066
 
