--- a/pubman/pubman_presentation/src/main/resources/Messages_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_de.properties
@@ -265,6 +265,9 @@ ViewItemFull_browse_to_item_not_in_range = Der eingegebene Wert existiert nicht
 #
 ViewItem_deleteConfirmation = Wollen Sie den Datensatz wirklich l\u00F6schen?
 
+#
+# Yearbook
+#
 Yearbook_AddedItemsToYearbook = Datensatz/Datens\u00E4tze zum Jahrbuch hinzugef\u00FCgt
 
 Yearbook_ErrorAddingMembers = Fehler beim Hinzuf\u00FCgen von Datens\u00E4tzen
@@ -275,9 +278,13 @@ Yearbook_ItemAlreadyInYearbook = Datensatz befindet sich bereits im Jahrbuch
 
 Yearbook_ItemInvalid = Datensatz $1 ist ung\u00FCltig.
 
-Yearbook_ReleaseError = Fehler beim Schlie\u00DFen des Jahrbuchs
+Yearbook_ReleaseError = Fehler beim Abschlie\u00DFen des Jahrbuchs
 
-Yearbook_ReleasedSuccessfully = Jahrbuch wurde erfolgreich geschlossen.
+Yearbook_ReleasedSuccessfully = Jahrbuch wurde erfolgreich abgeschlossen.
+
+Yearbook_SubmitError = Fehler beim Abschlie\u00DFen des Jahrbuchs
+
+Yearbook_SubmittedSuccessfully = Jahrbuch wurde erfolgreich abgeschlossen
 
 Yearbook_RemovedItemsFromYearbook = Datensatz/Datens\u00E4tze aus dem Jahrbuch entfernt
 
@@ -285,11 +292,31 @@ Yearbook_allItemsValid = Alle Datens\u00E4tze sind valide.
 
 Yearbook_createdSuccessfully = Jahrbuch wurde erfolgreich erstellt und kann nun bef\u00FCllt werden
 
-Yearbook_creationError = Fehler beim Erstellen des Jahrbuchs. Bitte probieren Sie es sp\u00E4ter noch einmal oder kantaktieren Sie den Pubman Support.
+Yearbook_creationError = Fehler beim Erstellen des Jahrbuchs oder zugeh\u00F6rigen User-Group. Bitte probieren Sie es sp\u00E4ter noch einmal oder kontaktieren Sie den Pubman Support.
 
 Yearbook_grantsAdded = Rechte f\u00FCr weitere Nutzer wurden erfolgfreich erstellt
 
 Yearbook_noYearbookFound = Es wurde kein Jahrbuch f\u00FCr Ihr Institut gefunden
+
+Yearbook_deleteError = Fehler beim Löschen des Jahrbuchs
+
+Yearbook_editError = Fehler beim Editieren des Jahrbuchs
+
+Yearbook_noArchivedItems = Es wurden keine archivierten Jahrb\u00FCcher gefunden
+
+Yearbook_sendBackForReworkError = Fehler beim Zur\u00FCcksenden
+
+Yearbook_itemNotReleasedWarning = konnte aufgrund seines Zustands nicht ver\u00F6ffentlicht werden
+
+Yearbook_itemNotSentBackWarning = konnte aufgrund seines Zustands nicht zur\u00FCckgesendet werden
+
+Yearbook_revisedSuccessfully = Jahrburch wurde erfolgreich zur \u00DCberarbeitung zur\u00FCckgesendet
+
+Yearbook_reinitializeError = Das Jahrbuch konnte nicht neu geladen werden, und ist daher m\u00F6glicherwei\u00DFe nicht akutell
+
+Yearbook_loadArchive = Um vergangene Jahrb\u00FCcher einzusehen, besuchen Sie das 
+
+Yearbook_noItemsSelected = Sie haben keine Auswahl getroffen
 
 basket_ItemsChanged = Datens\u00E4tze haben ihren Status so ver\u00E4ndert dass Sie nicht mehr befugt sind die aktuellste Version zu sehen. Diese Datens\u00E4tze wurden vor\u00FCbergehend aus der Ablage entfernt bis sie wieder zur Verf\u00FCgung stehen.
 
