--- a/pubman/pubman_presentation/src/main/resources/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_en.properties
@@ -263,6 +263,8 @@ ENUM_CRITERIA_COLLECTION = Collection
 
 ENUM_CRITERIA_CONTEXT = Collection Name
 
+ENUM_CRITERIA_CREATION_DATE = Creation Date
+
 ENUM_CRITERIA_CREATOR = Creator
 
 #
@@ -293,8 +295,6 @@ ENUM_CRITERIA_SOURCE_TITLE = Source Title
 ENUM_CRITERIA_STATE = State
 
 ENUM_CRITERIA_TITLE = Title
-
-ENUM_CRITERIA_CREATION_DATE = Creation Date
 
 ENUM_DEGREETYPE_BACHELOR = Bachelor
 
@@ -470,6 +470,8 @@ ENUM_IMPORT_FORMAT_ENDNOTEICE = EndNote ICE
 ENUM_IMPORT_FORMAT_ESCIDOC = eSciDoc
 
 ENUM_IMPORT_FORMAT_MAB = MAB
+
+ENUM_IMPORT_FORMAT_MARC = MARC21
 
 ENUM_IMPORT_FORMAT_RIS = RIS
 
@@ -1723,6 +1725,8 @@ WorkspacesPage = Workspaces
 
 Year = Year
 
+YearbookArchivePage = Yearbook Archive
+
 YearbookCandidatesPage = Candidates
 
 YearbookInvalidItemsPage = Validation Result
@@ -1739,11 +1743,13 @@ YearbookNonCandidatesPage = Non Candidates
 
 YearbookPage = Yearbook
 
-YearbookArchivePage = Yearbook Archive
+Yearbook_YearbookArchive = Archive
 
 Yearbook_addToYearbook = Add selected to Yearbook
 
 Yearbook_addToYearbookViewItem = Add to Yearbook
+
+Yearbook_btnExport = export yearbook
 
 Yearbook_collaboratorUserIds = Choose further users from your institute who are allowed to collaborate on the yearbook  (optional)
 
@@ -1753,13 +1759,13 @@ Yearbook_createYearbook = Create Yearbook
 
 Yearbook_date = Time Frame
 
+Yearbook_editYearbook = Options
+
+Yearbook_information = Yearbook Information
+
 Yearbook_member = Member
 
 Yearbook_organization = Organization
-
-Yearbook_submitYearbook = Submit Yearbook
-
-Yearbook_sendBackForReworkYearbook = Revise Yearbook
 
 Yearbook_releaseYearbook = Close Yearbook
 
@@ -1767,19 +1773,15 @@ Yearbook_removeFromYearbook = Remove selected from Yearbook
 
 Yearbook_removeFromYearbookViewItem = Remove from Yearbook
 
-Yearbook_information = Yearbook Information
+Yearbook_sendBackForReworkYearbook = Revise Yearbook
+
+Yearbook_submitYearbook = Submit Yearbook
 
 Yearbook_title = Title
 
 Yearbook_validate = Validate
 
 Yearbook_validationMessageHeader = Yearbook Validation 
-
-Yearbook_editYearbook = Options
-
-Yearbook_YearbookArchive = Archive
-
-Yearbook_btnExport = export yearbook
 
 about = About PubMan
 
