--- a/pubman/pubman_presentation/src/main/resources/opensource/Label_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/opensource/Label_ja.properties
@@ -263,8 +263,6 @@ ENUM_CRITERIA_COLLECTION = \u30B3\u30EC\u30AF\u30B7\u30E7\u30F3
 
 ENUM_CRITERIA_CONTEXT = \u30B3\u30EC\u30AF\u30B7\u30E7\u30F3\u540D
 
-ENUM_CRITERIA_CREATION_DATE = Creation Date
-
 ENUM_CRITERIA_CREATOR = \u4F5C\u8005
 
 #
@@ -295,6 +293,8 @@ ENUM_CRITERIA_SOURCE_TITLE = \u51FA\u7248\u7269\u30BF\u30A4\u30C8\u30EB
 ENUM_CRITERIA_STATE = \u767B\u9332\u72B6\u6CC1
 
 ENUM_CRITERIA_TITLE = \u30BF\u30A4\u30C8\u30EB
+
+ENUM_CRITERIA_CREATION_DATE = Creation Date
 
 ENUM_DEGREETYPE_BACHELOR = \u5B66\u58EB\u53F7 (Bachelor)
 
@@ -396,7 +396,7 @@ ENUM_IDENTIFIERTYPE_ = \u8A72\u5F53\u306A\u3057
 
 ENUM_IDENTIFIERTYPE_ARXIV = arXiv
 
-ENUM_IDENTIFIERTYPE_BIBTEX_CITEKEY = BibTex\u53C2\u7167ID
+ENUM_IDENTIFIERTYPE_BIBTEX_CITEKEY = BibTex\u53c2\u7167ID
 
 ENUM_IDENTIFIERTYPE_BMC = BMC
 
@@ -451,8 +451,6 @@ ENUM_IMPORT_FORMAT_ENDNOTEICE = EndNote ICE
 ENUM_IMPORT_FORMAT_ESCIDOC = eSciDoc
 
 ENUM_IMPORT_FORMAT_MAB = MAB
-
-ENUM_IMPORT_FORMAT_MARC = MARC21
 
 ENUM_IMPORT_FORMAT_RIS = RIS
 
@@ -588,7 +586,7 @@ EditItem_NO_ITEM_SET = -
 
 EditItem_btAdd = \u8FFD\u52A0
 
-EditItem_btAddFile = \u30D5\u30A1\u30A4\u30EB\u3092\u8FFD\u52A0...
+EditItem_btAddFile = \u30d5\u30a1\u30a4\u30eb\u3092\u8ffd\u52a0...
 
 EditItem_btAddTitle = \u5225\u30BF\u30A4\u30C8\u30EB\u3092\u8FFD\u52A0
 
@@ -686,15 +684,15 @@ EditItem_lblGenre = \u8CC7\u6599\u7A2E\u5225
 
 EditItem_lblIssue = \u53F7
 
-EditItem_lblItemDepositor = \u767B\u9332\u8005: 
+EditItem_lblItemDepositor = \u767b\u9332\u8005: 
 
-EditItem_lblItemLatestModification = \u6700\u7D42\u66F4\u65B0
+EditItem_lblItemLatestModification = \u6700\u7d42\u66f4\u65b0
 
-EditItem_lblItemLatestModifier = \u6700\u7D42\u66F4\u65B0: 
+EditItem_lblItemLatestModifier = \u6700\u7d42\u66f4\u65b0: 
 
-EditItem_lblItemVersionID = \u30A2\u30A4\u30C6\u30E0ID: 
+EditItem_lblItemVersionID = \u30a2\u30a4\u30c6\u30e0ID: 
 
-EditItem_lblItemlatestChange = \u4F5C\u6210\u65E5
+EditItem_lblItemlatestChange = \u4f5c\u6210\u65e5
 
 EditItem_lblLicencingInfo = \u30E9\u30A4\u30BB\u30F3\u30B9
 
@@ -1008,7 +1006,7 @@ SearchResultList_lblItems = \u4EF6
 
 SearchResultList_lblNoHits = 0 \u4EF6
 
-SearchResultList_lblRestServiceExamplePage = \u540C\u3058\u691C\u7D22\u6761\u4EF6\u3092\u4F7F\u3063\u3066\u30A8\u30AF\u30B9\u30DD\u30FC\u30C8\u51FA\u529B
+SearchResultList_lblRestServiceExamplePage = \u540c\u3058\u691c\u7d22\u6761\u4ef6\u3092\u4f7f\u3063\u3066\u30a8\u30af\u30b9\u30dd\u30fc\u30c8\u51fa\u529b
 
 #
 # SearchResultList
@@ -1066,41 +1064,41 @@ SubmitItem_lnkSubmit = \u767B\u9332
 #
 # Tools
 #
-ToolsPage = \u30C4\u30FC\u30EB
+ToolsPage = \u30c4\u30fc\u30eb
 
 Tools_lblCoNE = CoNE
 
-Tools_lblCoNEHead = \u5178\u62E0\u60C5\u5831\u306E\u7BA1\u7406 (CoNE)
+Tools_lblCoNEHead = \u5178\u62e0\u60c5\u5831\u306e\u7ba1\u7406 (CoNE)
 
-Tools_lblCoNEText = \u8457\u8005\u540D\u3001\u96D1\u8A8C\u540D\u3001\u8A00\u8A9E\u3001\u5206\u985E\u7B49\u306E\u540D\u79F0\u5178\u62E0\u60C5\u5831\u306E\u4E00\u89A7\u8868\u793A\u3068\u7BA1\u7406
+Tools_lblCoNEText = \u8457\u8005\u540d\u3001\u96d1\u8a8c\u540d\u3001\u8a00\u8a9e\u3001\u5206\u985e\u7b49\u306e\u540d\u79f0\u5178\u62e0\u60c5\u5831\u306e\u4e00\u89a7\u8868\u793a\u3068\u7ba1\u7406
 
 Tools_lblColab = http://colab.mpdl.mpg.de/mediawiki/ESciDoc_Interfaces
 
 Tools_lblREST = REST
 
-Tools_lblRESTHead = \u691C\u7D22\u30A8\u30AF\u30B9\u30DD\u30FC\u30C8\u51FA\u529B (REST)
+Tools_lblRESTHead = \u691c\u7d22\u30a8\u30af\u30b9\u30dd\u30fc\u30c8\u51fa\u529b (REST)
 
-Tools_lblRESTText = PubMan\u30C7\u30FC\u30BF\u3092\u5916\u90E8\u30B7\u30B9\u30C6\u30E0\u3068\u7D71\u5408\u3059\u308B\u305F\u3081\u306B\u30A8\u30AF\u30B9\u30DD\u30FC\u30C8\u51FA\u529B\u306E\u64CD\u4F5C\u304C\u53EF\u80FD\u3067\u3059\u3002
+Tools_lblRESTText = PubMan\u30c7\u30fc\u30bf\u3092\u5916\u90e8\u30b7\u30b9\u30c6\u30e0\u3068\u7d71\u5408\u3059\u308b\u305f\u3081\u306b\u30a8\u30af\u30b9\u30dd\u30fc\u30c8\u51fa\u529b\u306e\u64cd\u4f5c\u304c\u53ef\u80fd\u3067\u3059\u3002
 
 Tools_lblSWORD = SWORD
 
-Tools_lblSWORDHead = SWORD\u30B5\u30FC\u30D3\u30B9
+Tools_lblSWORDHead = SWORD\u30b5\u30fc\u30d3\u30b9
 
-Tools_lblSWORDText = \u5916\u90E8\u30B5\u30FC\u30D0\u304B\u3089\u81EA\u52D5\u767B\u9332\u3059\u308B\u305F\u3081\u306E\u30B5\u30FC\u30D3\u30B9\u30A4\u30F3\u30BF\u30D5\u30A7\u30FC\u30B9
+Tools_lblSWORDText = \u5916\u90e8\u30b5\u30fc\u30d0\u304b\u3089\u81ea\u52d5\u767b\u9332\u3059\u308b\u305f\u3081\u306e\u30b5\u30fc\u30d3\u30b9\u30a4\u30f3\u30bf\u30d5\u30a7\u30fc\u30b9
 
-Tools_lblTools = \u30C4\u30FC\u30EB
+Tools_lblTools = \u30c4\u30fc\u30eb
 
 Tools_lblUnAPI = unAPI
 
-Tools_lblUnAPIHead = \u30C7\u30FC\u30BF\u53D6\u5F97\u30B5\u30FC\u30D3\u30B9 (unAPI)
+Tools_lblUnAPIHead = \u30c7\u30fc\u30bf\u53d6\u5f97\u30b5\u30fc\u30d3\u30b9 (unAPI)
 
-Tools_lblUnAPIText = arXiv, BioMed Central, PubMed Central, Spires\u7B49\u306E\u5916\u90E8\u30C7\u30FC\u30BF\u30D9\u30FC\u30B9\u304B\u3089\u6587\u732E\u30C7\u30FC\u30BF\u3092\u53D6\u5F97\u3067\u304D\u307E\u3059\u3002
+Tools_lblUnAPIText = arXiv, BioMed Central, PubMed Central, Spires\u7b49\u306e\u5916\u90e8\u30c7\u30fc\u30bf\u30d9\u30fc\u30b9\u304b\u3089\u6587\u732e\u30c7\u30fc\u30bf\u3092\u53d6\u5f97\u3067\u304d\u307e\u3059\u3002
 
-Tools_lblValidationService = \u30C7\u30FC\u30BF\u691C\u8A3C\u30B5\u30FC\u30D3\u30B9
+Tools_lblValidationService = \u30c7\u30fc\u30bf\u691c\u8a3c\u30b5\u30fc\u30d3\u30b9
 
-Tools_lblValidationServiceHead = \u30C7\u30FC\u30BF\u691C\u8A3C\u30B5\u30FC\u30D3\u30B9
+Tools_lblValidationServiceHead = \u30c7\u30fc\u30bf\u691c\u8a3c\u30b5\u30fc\u30d3\u30b9
 
-Tools_lblValidationServiceText = \u5165\u529B\u3057\u305F\u6587\u732EXML\u30C7\u30FC\u30BF\u306E\u5185\u5BB9\u304C\u3042\u3063\u3066\u3044\u308B\u304B\u691C\u8A3C\u3057\u307E\u3059\u3002
+Tools_lblValidationServiceText = \u5165\u529b\u3057\u305f\u6587\u732eXML\u30c7\u30fc\u30bf\u306e\u5185\u5bb9\u304c\u3042\u3063\u3066\u3044\u308b\u304b\u691c\u8a3c\u3057\u307e\u3059\u3002
 
 ViewItemFull_btnFileSection = \u30D5\u30A1\u30A4\u30EB
 
@@ -1176,7 +1174,7 @@ ViewItemFull_lblFileLicense = CC\u30E9\u30A4\u30BB\u30F3\u30B9
 
 ViewItemFull_lblFileLicenseShow = \u5225\u30A6\u30A3\u30F3\u30C9\u30A6\u3067\u30E9\u30A4\u30BB\u30F3\u30B9\u60C5\u5831\u3092\u898B\u308B
 
-ViewItemFull_lblFileMimeTypeSize = MIME\u30BF\u30A4\u30D7 \uFF0F \u30C1\u30A7\u30C3\u30AF\u30B5\u30E0
+ViewItemFull_lblFileMimeTypeSize = MIME\u30bf\u30a4\u30d7 \uff0f \u30c1\u30a7\u30c3\u30af\u30b5\u30e0
 
 ViewItemFull_lblFileName = \u30D5\u30A1\u30A4\u30EB\u540D
 
@@ -1216,7 +1214,7 @@ ViewItemFull_lblLanguages = \u8A00\u8A9E
 
 ViewItemFull_lblLastModified = \u6700\u7D42\u66F4\u65B0
 
-ViewItemFull_lblLatestVersion = \u6700\u65B0\u7248
+ViewItemFull_lblLatestVersion = \u6700\u65b0\u7248
 
 ViewItemFull_lblLegalCaseCourtName = \u88C1\u5224\u6240\u540D
 
@@ -1350,23 +1348,23 @@ ViewItemLogPage = \u5C65\u6B74\u60C5\u5831\u3092\u8868\u793A
 
 ViewItemLog_Header = \u30A2\u30A4\u30C6\u30E0\u30ED\u30B0 
 
-ViewItemLog_lblAssignVersionPid = \u30D0\u30FC\u30B8\u30E7\u30F3PID\u4ED8\u4E0E\u65E5\u6642
+ViewItemLog_lblAssignVersionPid = \u30d0\u30fc\u30b8\u30e7\u30f3PID\u4ed8\u4e0e\u65e5\u6642
 
 ViewItemLog_lblComment = \u8AAC\u660E:
 
-ViewItemLog_lblCreate = \u4F5C\u6210\u65E5\u6642
+ViewItemLog_lblCreate = \u4F5C\u6210\u65e5\u6642
 
 ViewItemLog_lblInRevision = \u5DEE\u3057\u623B\u3057
 
 ViewItemLog_lblItemLog = \u6587\u732E\u60C5\u5831\u306E\u5C65\u6B74
 
-ViewItemLog_lblRelease = \u516C\u958B\u65E5\u6642
+ViewItemLog_lblRelease = \u516C\u958B\u65e5\u6642
 
-ViewItemLog_lblSubmit = \u767B\u9332\u65E5\u6642
+ViewItemLog_lblSubmit = \u767B\u9332\u65e5\u6642
 
-ViewItemLog_lblUpdate = \u66F4\u65B0\u65E5\u6642
+ViewItemLog_lblUpdate = \u66F4\u65B0\u65e5\u6642
 
-ViewItemLog_lblWithdraw = \u53D6\u308A\u4E0B\u3052\u65E5\u6642
+ViewItemLog_lblWithdraw = \u53D6\u308A\u4E0B\u3052\u65e5\u6642
 
 ViewItemMedium_lblAffiliations = \u6240\u5C5E
 
@@ -1699,8 +1697,6 @@ WorkspacesPage = \u7BA1\u7406\u753B\u9762
 
 Year = \u520A\u884C\u5E74
 
-YearbookArchivePage = Yearbook Archive
-
 YearbookCandidatesPage = Candidates
 
 YearbookInvalidItemsPage = Validation Result
@@ -1717,13 +1713,11 @@ YearbookNonCandidatesPage = Non Candidates
 
 YearbookPage = Yearbook
 
-Yearbook_YearbookArchive = Archive
+YearbookArchivePage = Yearbook Archive
 
 Yearbook_addToYearbook = Add selected to Yearbook
 
 Yearbook_addToYearbookViewItem = Add to Yearbook
-
-Yearbook_btnExport = export yearbook
 
 Yearbook_collaboratorUserIds = Choose further users from your institute who are allowed to collaborate on the yearbook  (optional)
 
@@ -1733,13 +1727,13 @@ Yearbook_createYearbook = Create Yearbook
 
 Yearbook_date = Time Frame
 
-Yearbook_editYearbook = Options
-
-Yearbook_information = Yearbook Information
-
 Yearbook_member = Member
 
 Yearbook_organization = Organization
+
+Yearbook_submitYearbook = Submit Yearbook
+
+Yearbook_sendBackForReworkYearbook = Revise Yearbook
 
 Yearbook_releaseYearbook = Close Yearbook
 
@@ -1747,15 +1741,19 @@ Yearbook_removeFromYearbook = Remove selected from Yearbook
 
 Yearbook_removeFromYearbookViewItem = Remove from Yearbook
 
-Yearbook_sendBackForReworkYearbook = Revise Yearbook
-
-Yearbook_submitYearbook = Submit Yearbook
+Yearbook_information = Yearbook Information
 
 Yearbook_title = Title
 
 Yearbook_validate = Validate
 
 Yearbook_validationMessageHeader = Yearbook Validation
+
+Yearbook_editYearbook = Options
+
+Yearbook_YearbookArchive = Archive
+
+Yearbook_btnExport = export yearbook
 
 about = PubMan\u306B\u3064\u3044\u3066
 
@@ -1974,10 +1972,10 @@ adv_search_lblChkType_publishedpr = \u7D19\u7248\u51FA\u7248\u65E5
 
 adv_search_lblChkType_submitted = \u6295\u7A3F\u65E5
 
-adv_search_lblClassification = \u5206\u985E
+adv_search_lblClassification = \u5206\u985e
 
 #Event
-adv_search_lblEventInvited = \u62DB\u5F85\u8B1B\u6F14
+adv_search_lblEventInvited = \u62db\u5f85\u8b1b\u6f14
 
 adv_search_lblFile = [NEW] Files
 
@@ -1992,7 +1990,7 @@ adv_search_lblFileAvailable_YES = [NEW] Yes
 #Date
 adv_search_lblFrom = \u958B\u59CB\u65E5(YYYY-MM-DD)
 
-adv_search_lblInclHistory = \u65E7\u540D\u30FB\u65B0\u540D\u3092\u542B\u3080
+adv_search_lblInclHistory = \u65e7\u540d\u30fb\u65b0\u540d\u3092\u542b\u3080
 
 adv_search_lblLanguage = \u8CC7\u6599\u306E\u8A00\u8A9E
 
@@ -2072,9 +2070,9 @@ all = \u5168\u3066\u3092\u9078\u629E
 
 cancel = \u30AD\u30E3\u30F3\u30BB\u30EB
 
-chooseWorkspace_descImportWorkspace = PubMan\u3078\u306E\u4E00\u62EC\u767B\u9332\u72B6\u6CC1\u3092\u78BA\u8A8D\u3057\u3001\u5BFE\u8C61\u30A2\u30A4\u30C6\u30E0\u3092\u4E00\u62EC\u3067\u524A\u9664\u3057\u305F\u308A\u516C\u958B\u3057\u305F\u308A\u3067\u304D\u307E\u3059\u3002
+chooseWorkspace_descImportWorkspace = PubMan\u3078\u306e\u4e00\u62ec\u767b\u9332\u72b6\u6cc1\u3092\u78ba\u8a8d\u3057\u3001\u5bfe\u8c61\u30a2\u30a4\u30c6\u30e0\u3092\u4e00\u62ec\u3067\u524a\u9664\u3057\u305f\u308a\u516c\u958b\u3057\u305f\u308a\u3067\u304d\u307e\u3059\u3002
 
-chooseWorkspace_descQAWorkspace = \u767B\u9332\u30A2\u30A4\u30C6\u30E0\u3092\u7DE8\u96C6\u3001\u78BA\u8A8D\u3067\u304D\u307E\u3059\u3002\u7BA1\u7406\u8005\u767B\u9332\u3055\u308C\u3066\u3044\u308B\u5834\u5408\u306F\u3001\u767B\u9332\u8005\u306B\u5DEE\u3057\u623B\u3057\u305F\u308A\u3001\u516C\u958B\u51E6\u7406\u3092\u884C\u3046\u3053\u3068\u3082\u53EF\u80FD\u307E\u3059\u3002
+chooseWorkspace_descQAWorkspace = \u767b\u9332\u30a2\u30a4\u30c6\u30e0\u3092\u7de8\u96c6\u3001\u78ba\u8a8d\u3067\u304d\u307e\u3059\u3002\u7ba1\u7406\u8005\u767b\u9332\u3055\u308c\u3066\u3044\u308b\u5834\u5408\u306f\u3001\u767b\u9332\u8005\u306b\u5dee\u3057\u623b\u3057\u305f\u308a\u3001\u516c\u958b\u51e6\u7406\u3092\u884c\u3046\u3053\u3068\u3082\u53ef\u80fd\u307e\u3059\u3002
 
 chooseWorkspace_descReportWorkspace = [new] Here you can create annual publication reports for your institute. The lists can be exported in HTML or InDesign XML format.
 
@@ -2674,7 +2672,7 @@ styleTheme_lblHighContrast = \u30B3\u30F3\u30C8\u30E9\u30B9\u30C8
 #STYLE THEMES
 styleTheme_lblPubMan = \u30D6\u30EB\u30FC
 
-styleTheme_lblSpecial = \u30B9\u30DA\u30B7\u30E3\u30EB
+styleTheme_lblSpecial = \u30b9\u30da\u30b7\u30e3\u30eb
 
 submission_descEasySubmission = \u30B9\u30C6\u30C3\u30D7\u30D0\u30A4\u30B9\u30C6\u30C3\u30D7\u3067\u30A2\u30A4\u30C6\u30E0\u3092\u767B\u9332\u3057\u3066\u3044\u304F\u3053\u3068\u304C\u3067\u304D\u307E\u3059\u3002\u306F\u3058\u3081\u306E\u3046\u3061\u306F\u3053\u3061\u3089\u3092\u4F7F\u3046\u3053\u3068\u3092\u63A8\u5968\u3057\u307E\u3059\u3002
 
