--- a/pubman/pubman_presentation/src/main/resources/opensource/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/opensource/Label_de.properties
@@ -263,8 +263,6 @@ ENUM_CRITERIA_COLLECTION = Collection
 
 ENUM_CRITERIA_CONTEXT = Name der Collection
 
-ENUM_CRITERIA_CREATION_DATE = Erstellungsdatum
-
 ENUM_CRITERIA_CREATOR = Urheber
 
 #
@@ -295,6 +293,8 @@ ENUM_CRITERIA_SOURCE_TITLE = Titel d. Quelle
 ENUM_CRITERIA_STATE = Status
 
 ENUM_CRITERIA_TITLE = Titel
+
+ENUM_CRITERIA_CREATION_DATE = Erstellungsdatum
 
 ENUM_DEGREETYPE_BACHELOR = Bachelor
 
@@ -470,8 +470,6 @@ ENUM_IMPORT_FORMAT_ENDNOTEICE = EndNote ICE
 ENUM_IMPORT_FORMAT_ESCIDOC = eSciDoc
 
 ENUM_IMPORT_FORMAT_MAB = MAB
-
-ENUM_IMPORT_FORMAT_MARC = MARC21
 
 ENUM_IMPORT_FORMAT_RIS = RIS
 
@@ -1725,15 +1723,13 @@ WorkspacesPage = Arbeitsbereiche
 
 Year = Jahr
 
-YearbookArchivePage = Jahrbuch Archiv
-
 YearbookCandidatesPage = Kandidaten
 
 YearbookInvalidItemsPage = Validierungsergebnis
 
 YearbookItemCreatePage = Jahrbuch erstellen
 
-YearbookItemEditPage = Jahrbuch-Optionen
+YearbookItemEditPage = Jahrbuch\u002DOptionen
 
 YearbookMembersPage = Mitglieder
 
@@ -1743,13 +1739,11 @@ YearbookNonCandidatesPage = \u00DCbrige Datens\u00E4tze
 
 YearbookPage = Jahrbuch
 
-Yearbook_YearbookArchive = Archiv
+YearbookArchivePage = Jahrbuch Archiv
 
 Yearbook_addToYearbook = Auswahl dem Jahrbuch hinzuf\u00FCgen
 
 Yearbook_addToYearbookViewItem = Dem Jahrbuch hinzuf\u00FCgen
-
-Yearbook_btnExport = Jahrbuch exportieren
 
 Yearbook_collaboratorUserIds = W\u00E4hlen Sie weitere Nutzer ihres Instituts, die au\u00DFer Ihnen das Jahrbuch bearbeiten d\u00FCrfen (optional)
 
@@ -1759,13 +1753,13 @@ Yearbook_createYearbook = Jahrbuch erstellen
 
 Yearbook_date = Zeitrahmen
 
-Yearbook_editYearbook = Optionen
-
-Yearbook_information = Jahrbuchinformationen
-
 Yearbook_member = Mitglied
 
 Yearbook_organization = Organisation
+
+Yearbook_submitYearbook = Jahrbuch abschlie\u00DFen
+
+Yearbook_sendBackForReworkYearbook = Jahrbuch zur\u00FCcksenden
 
 Yearbook_releaseYearbook = Jahrbuch freigeben
 
@@ -1773,15 +1767,19 @@ Yearbook_removeFromYearbook = Aus dem Jahrbuch entfernen
 
 Yearbook_removeFromYearbookViewItem = Aus dem Jahrbuch entfernen
 
-Yearbook_sendBackForReworkYearbook = Jahrbuch zur\u00FCcksenden
-
-Yearbook_submitYearbook = Jahrbuch abschlie\u00DFen
+Yearbook_information = Jahrbuchinformationen
 
 Yearbook_title = Titel
 
 Yearbook_validate = Validieren
 
 Yearbook_validationMessageHeader = Jahrbuch Validierung
+
+Yearbook_editYearbook = Optionen
+
+Yearbook_YearbookArchive = Archiv
+
+Yearbook_btnExport = Jahrbuch exportieren
 
 about = \u00DCber PubMan
 
