and again marc21
Former-commit-id: 37b6796959670ec282770554a43577407e92b96a

--- a/pubman/pubman_presentation/src/main/resources/mpg/Label_es.properties
+++ b/pubman/pubman_presentation/src/main/resources/mpg/Label_es.properties
@@ -448,6 +448,8 @@ ENUM_IMPORT_FORMAT_ESCIDOC = eSciDoc
 
 ENUM_IMPORT_FORMAT_MAB = MAB
 
+ENUM_IMPORT_FORMAT_MARC = MARC21
+
 ENUM_IMPORT_FORMAT_RIS = RIS
 
 ENUM_IMPORT_FORMAT_WOS = WOS
