--- a/pubman/pubman_presentation/src/main/resources/opensource/Label_es.properties
+++ b/pubman/pubman_presentation/src/main/resources/opensource/Label_es.properties
@@ -263,6 +263,8 @@ ENUM_CRITERIA_COLLECTION = Colecci\u00F3n
 
 ENUM_CRITERIA_CONTEXT = Nombre de la Colecci\u00F3n
 
+ENUM_CRITERIA_CREATION_DATE = Creation Date
+
 ENUM_CRITERIA_CREATOR = Creador
 
 #
@@ -293,8 +295,6 @@ ENUM_CRITERIA_SOURCE_TITLE = Fuente T\u00EDtulo
 ENUM_CRITERIA_STATE = Estado
 
 ENUM_CRITERIA_TITLE = T\u00EDtulo
-
-ENUM_CRITERIA_CREATION_DATE = Creation Date
 
 ENUM_DEGREETYPE_BACHELOR = Bachelor
 
@@ -449,6 +449,8 @@ ENUM_IMPORT_FORMAT_ENDNOTEICE = EndNote ICE
 ENUM_IMPORT_FORMAT_ESCIDOC = eSciDoc
 
 ENUM_IMPORT_FORMAT_MAB = MAB
+
+ENUM_IMPORT_FORMAT_MARC = MARC21
 
 ENUM_IMPORT_FORMAT_RIS = RIS
 
@@ -1710,6 +1712,8 @@ WithdrawItem_lnkWithdraw = Retirar
 
 WorkspacesPage = Workspaces
 
+YearbookArchivePage = Yearbook Archive
+
 YearbookCandidatesPage = Candidates
 
 YearbookInvalidItemsPage = Validation Result
@@ -1726,11 +1730,13 @@ YearbookNonCandidatesPage = Non Candidates
 
 YearbookPage = Yearbook
 
-YearbookArchivePage = Yearbook Archive
+Yearbook_YearbookArchive = Archive
 
 Yearbook_addToYearbook = Add selected to Yearbook
 
 Yearbook_addToYearbookViewItem = Add to Yearbook
+
+Yearbook_btnExport = export yearbook
 
 Yearbook_collaboratorUserIds = Choose further users from your institute who are allowed to collaborate on the yearbook  (optional)
 
@@ -1740,13 +1746,13 @@ Yearbook_createYearbook = Create Yearbook
 
 Yearbook_date = Time Frame
 
+Yearbook_editYearbook = Options
+
+Yearbook_information = Yearbook Information
+
 Yearbook_member = Member
 
 Yearbook_organization = Organization
-
-Yearbook_submitYearbook = Submit Yearbook
-
-Yearbook_sendBackForReworkYearbook = Revise Yearbook
 
 Yearbook_releaseYearbook = Close Yearbook
 
@@ -1754,19 +1760,15 @@ Yearbook_removeFromYearbook = Remove selected from Yearbook
 
 Yearbook_removeFromYearbookViewItem = Remove from Yearbook
 
-Yearbook_information = Yearbook Information
+Yearbook_sendBackForReworkYearbook = Revise Yearbook
+
+Yearbook_submitYearbook = Submit Yearbook
 
 Yearbook_title = Title
 
 Yearbook_validate = Validate
 
 Yearbook_validationMessageHeader = Yearbook Validation
-
-Yearbook_editYearbook = Options
-
-Yearbook_YearbookArchive = Archive
-
-Yearbook_btnExport = export yearbook
 
 about = Sobre PubMan
 
